--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,11 @@ jobs:
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.7.0
       with:
-        ssh-private-key: ${{ secrets.DO_SSH_PRIVATE_KEY }}
+        ssh-private-key: |
+          ${{ secrets.DO_SSH_PRIVATE_KEY }}
+
+    - name: Verificar claves cargadas (debug opcional)
+      run: ssh-add -L
 
     - name: Deploy on DigitalOcean Droplet
       run: |
